# cpp-plotly-plotter

./: .clang-format  .clang-tidy  .clang-tidy-checker  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  cspell.json  iwyu_mappings.imp  pyproject.toml  vcpkg-configuration.json  vcpkg.json
examples/: CMakeLists.txt  add_titles.cpp
examples/bars/: create_bars_using_figure_builder.cpp  create_simple_bar.cpp
examples/boxes/: create_boxes_using_figure_builder.cpp  create_multiple_boxes.cpp  create_simple_box.cpp  show_mean_and_stddev.cpp
examples/color_scales/: invert_color_scale.cpp  neutral_color_scales.cpp  positive_and_negative_color_scales.cpp  positive_color_scales.cpp  use_color_scale.cpp  use_positive_color_scale.cpp  use_positive_negative_color_scale.cpp
examples/configurations/: customize_hover_texts.cpp  set_axes_to_log_scale.cpp  set_error_bars.cpp
examples/figure_builders/: set_axes_to_log_scale.cpp
examples/get_started/: simple_plot.cpp  use_figure_builder.cpp
examples/get_started/grouping_in_figure_builder/: combine_groupings.cpp  use_group.cpp  use_subplot_column.cpp  use_subplot_row.cpp
examples/heatmaps/: create_heatmap.cpp
examples/histograms/: create_histogram_using_figure_builder.cpp
examples/scatters/: colorize_markers_in_figure_builder.cpp  create_grouped_scatter_using_traces.cpp  create_scatter_using_figure_builder.cpp  plot_many_points_using_web_gl.cpp  select_modes.cpp
examples/violins/: create_multiple_violins.cpp  create_simple_violin.cpp  create_violins_using_figure_builder.cpp  show_box_and_mean.cpp
src/: CMakeLists.txt  config.h.in  source_list.cmake  unity_source.cpp
src/plotly_plotter/: color_scales.cpp  html_to_pdf.cpp  invert_color_scale.cpp  json_converter.cpp  styles.cpp  to_string.cpp  write_html.cpp  write_pdf.cpp  write_png.cpp  write_svg.cpp
src/plotly_plotter/details/: format_time.cpp  get_chrome_path.cpp  html_to_pdf.cpp  html_to_png.cpp  write_html_impl.cpp
src/plotly_plotter/figure_builders/: bar.cpp  bar_based_histogram.cpp  box.cpp  figure_builder_base.cpp  histogram.cpp  line.cpp  plotly_histogram.cpp  scatter.cpp  violin.cpp
src/plotly_plotter/figure_builders/details/: figure_builder_helper.cpp
src/plotly_plotter/io/: chrome_converter.cpp  html_to_pdf_converter_base.cpp  html_to_png_converter_base.cpp  pdf_to_svg_converter_base.cpp  pdftocairo_converter.cpp  playwright_converter.cpp
src/plotly_plotter/io/details/: execute_command.cpp
src/plotly_plotter/utils/: calculate_histogram_bin_width.cpp
tests/integ/figure_builders/: CMakeLists.txt  bar_based_histogram_test.cpp  bar_test.cpp  box_test.cpp  color_sequence_test.cpp  dash_sequence_test.cpp  data_types_test.cpp  histogram_test.cpp  line_test.cpp  plotly_histogram_test.cpp  scatter_test.cpp  source_list.cmake  unity_source.cpp  violin_test.cpp
tests/integ/figure_builders/approvals/: bar.bar_with_a_group.in_animation_frames.approved.html  bar.bar_with_a_group.in_columns_of_subplots.approved.html  bar.bar_with_a_group.in_group.approved.html  bar.bar_with_a_group.in_rows_of_subplots.approved.html  bar.log_scale.approved.html  bar.simple_bar_plot.approved.html  bar_based_histogram.histogram_with_a_group.in_animation_frames.approved.html  bar_based_histogram.histogram_with_a_group.in_columns_of_subplots.approved.html  bar_based_histogram.histogram_with_a_group.in_group.approved.html  bar_based_histogram.histogram_with_a_group.in_rows_of_subplots.approved.html  bar_based_histogram.histogram_with_two_groups.in_columns_and_animation_frame.approved.html  bar_based_histogram.histogram_with_two_groups.in_columns_and_rows_of_subplots.approved.html  bar_based_histogram.histogram_with_two_groups.in_group_and_animation_frame.approved.html  bar_based_histogram.histogram_with_two_groups.in_group_and_columns_of_subplots.approved.html  bar_based_histogram.histogram_with_two_groups.in_group_and_rows_of_subplots.approved.html  bar_based_histogram.histogram_with_two_groups.in_rows_and_animation_frame.approved.html  bar_based_histogram.log_scale.approved.html  bar_based_histogram.simple_histogram.approved.html  box.box_with_a_group.in_animation_frames.approved.html  box.box_with_a_group.in_columns_of_subplots.approved.html  box.box_with_a_group.in_group.approved.html  box.box_with_a_group.in_rows_of_subplots.approved.html  box.box_with_a_group.in_x-axis.approved.html  box.box_with_three_groups.in_x-axis,_group_and_columns_of_subplots.approved.html  box.box_with_three_groups.in_x-axis,_group_and_rows_of_subplots.approved.html  box.box_with_two_groups.in_columns_and_rows_of_subplots.approved.html  box.box_with_two_groups.in_group_and_animation_frame.approved.html  box.box_with_two_groups.in_group_and_columns_of_subplots.approved.html  box.box_with_two_groups.in_group_and_rows_of_subplots.approved.html  box.box_with_two_groups.in_x-axis_and_animation_frame.approved.html  box.box_with_two_groups.in_x-axis_and_columns_of_subplots.approved.html  box.box_with_two_groups.in_x-axis_and_group.approved.html  box.box_with_two_groups.in_x-axis_and_rows_of_subplots.approved.html  box.log_scale.approved.html  box.simple_box_plot.approved.html  (+56 more)
tests/integ/outputs/: CMakeLists.txt  chrome_converter_test.cpp  chromium_test.cpp  execute_command_test.cpp  html_to_pdf_test.cpp  html_to_png_test.cpp  output_types_test.cpp  pdftocairo_converter_test.cpp  playwright_converter_test.cpp  run_test.py  source_list.cmake  unity_source.cpp  write_pdf_test.cpp  write_png_test.cpp  write_svg_test.cpp
tests/integ/plots/: CMakeLists.txt  box_test.cpp  config_test.cpp  data_types_test.cpp  layout_test.cpp  output_types_test.cpp  scatter_gl_test.cpp  scatter_test.cpp  source_list.cmake  unity_source.cpp  violin_test.cpp
tests/integ/traces/: CMakeLists.txt  animations_test.cpp  annotations_test.cpp  bar_test.cpp  box_test.cpp  color_scales.cpp  data_types_test.cpp  heatmap_test.cpp  histogram_test.cpp  layout_test.cpp  scatter_gl_test.cpp  scatter_test.cpp  source_list.cmake  subplots_test.cpp  test_main.cpp  unity_source.cpp  violin_test.cpp
(+418 files in other folders)
