[tool.poetry]
name = "cpp-plotly-plotter"
version = "0.0.0"
description = ""
authors = ["Kenta Kabashima <kenta_program37@hotmail.co.jp>"]
readme = "README.md"
packages = [{ include = "cpp_plotly_plotter_docs_helper", from = "scripts" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
setuptools = "^80.9.0"

[tool.poetry.group.test.dependencies]
click = "^8.3.1"
playwright = "^1.57.0"

[tool.poetry.group.doc.dependencies]
sphinx = "^8.2.3"
breathe = "^4.36.0"
sphinx-orange-book-theme = "^0.16.0"
sphinxcontrib-plantuml = "^0.31"
myst-parser = "^4.0.1"
myst-nb = "^1.3.0"
jupyterlab = "^4.5.1"
ipywidgets = "^8.1.8"
ipython = "^9.8.0"
ipykernel = "^7.1.0"
plotly = "^6.5.0"
sphinx-togglebutton = "^0.3.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.5.1"
black = "^25.12.0"
cmakelang = "^0.6.13"
doc8 = "^2.0.0"
sphinx-autobuild = "^2025.8.25"
clang-tidy-checker = "^0.6.0"
lcov_cobertura = "^2.1.1"
pylint = "^4.0.4"
mypy = "^1.19.1"
flake8 = "^7.3.0"
isort = "^7.0.0"
pydocstyle = "^6.3.0"
pytest = "^9.0.2"
djlint = "^1.36.4"
tqdm = "^4.67.1"
types-tqdm = "^4.67.0.20250809"
colour-science = "^0.4.7"
numpy = "^2.4.0"
matplotlib = "^3.10.8"
networkx = "^3.6.1"
pyyaml = "^6.0.3"
types-pyyaml = "^6.0.12.20250915"
flask = "^3.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pylint.main]
disable = "too-many-instance-attributes,line-too-long,global-variable-not-assigned,duplicate-code"
