[project]
name = "cpp-plotly-plotter"
version = "0.0.0"
description = ""
readme = "README.md"
authors = [
    { name = "Kenta Kabashima", email = "kenta_program37@hotmail.co.jp" },
]
requires-python = ">=3.12,<3.14"
dependencies = ["setuptools (>=81.0.0,<82.0.0)"]

[tool.poetry]
packages = [{ include = "cpp_plotly_plotter_docs_helper", from = "scripts" }]

[tool.poetry.group.test.dependencies]
click = "^8.3.1"
playwright = "^1.58.0"

[tool.poetry.group.doc.dependencies]
sphinx = "^9.1.0"
breathe = "^4.36.0"
sphinx-orange-book-theme = "^0.19.0"
sphinxcontrib-plantuml = "^0.31"
myst-parser = "^5.0.0"
myst-nb = "^1.3.0"
jupyterlab = "^4.5.3"
ipywidgets = "^8.1.8"
ipython = "^9.10.0"
ipykernel = "^7.2.0"
plotly = "^6.5.2"
sphinx-togglebutton = "^0.4.4"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.5.1"
black = "^26.1.0"
cmakelang = "^0.6.13"
doc8 = "^2.0.0"
sphinx-autobuild = "^2025.8.25"
clang-tidy-checker = "^0.6.0"
lcov_cobertura = "^2.1.1"
pylint = "^4.0.4"
mypy = "^1.19.1"
flake8 = "^7.3.0"
isort = "^7.0.0"
pydocstyle = "^6.3.0"
pytest = "^9.0.2"
djlint = "^1.36.4"
tqdm = "^4.67.3"
types-tqdm = "^4.67.3.20260205"
pyyaml = "^6.0.3"
types-pyyaml = "^6.0.12.20250915"
ok-palette-lab = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pylint.main]
disable = "too-many-instance-attributes,line-too-long,global-variable-not-assigned,duplicate-code"
